error_log.txt
Traceback (most recent call last):
  File "C:\Users\23614\anaconda3\Lib\py_compile.py", line 144, in compile
    code = loader.source_to_code(source_bytes, dfile or file,
                                 _optimize=optimize)
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "src/experiments/OmniGenV2_TAC_VAR_Aircraft.py", line 180
    except: pass
    ^^^^^^^^^^^^
SyntaxError: default 'except:' must be last

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "<string>", line 4, in <module>
    py_compile.compile('src/experiments/OmniGenV2_TAC_VAR_Aircraft.py', doraise=True)
    ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\23614\anaconda3\Lib\py_compile.py", line 150, in compile
    raise py_exc
py_compile.PyCompileError:   File "src/experiments/OmniGenV2_TAC_VAR_Aircraft.py", line 180
    except: pass
    ^^^^^^^^^^^^
SyntaxError: default 'except:' must be last

